# QCrBoxTools

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml  qcrboxtools_commit.yml
qcrboxtools/: replace_cli.py  requirements.txt
qcrboxtools/analyse/: convergence.py  ortep.py
qcrboxtools/analyse/quality/: base.py  cif.py  precision.py
qcrboxtools/analyse/quality/html/: __init__.py  quality_box.py
qcrboxtools/cif/: __init__.py  __main__.py  cif2cif.py  iso2aniso.py  merge.py  read.py  trim.py  uncertainties.py
qcrboxtools/cif/cif2cif/: __init__.py  base.py  yaml.py
qcrboxtools/cif/entries/: __init__.py  entry_check.py  entry_conversion.py  entry_lookup.py
qcrboxtools/cif/file_converter/: cartesian.py  hkl.py  shelxt.py  tsc.py
qcrboxtools/cif/file_converter/shelxl/: __init__.py  afix2cif.py  cif2afix.py  (+1 more)
qcrboxtools/converters/: __init__.py
qcrboxtools/converters/cif/: entry_check.py  entry_conversion.py  entry_lookup.py  trim.py
qcrboxtools/converters/shelx/: hkl.py
qcrboxtools/robots/: __init__.py  basecmd.py  basesocket.py  crysalispro.py  eval.py  mopro.py  olex2.py  utils.py
qcrboxtools/robots/crysalispro/: cap_robot.py
qcrboxtools/robots/eval/: __init__.py  eval_files.py  eval_robots.py
qcrboxtools/util/: __init__.py  cif.py  convergence.py  wine.py
tests/analyse/: test_convergence.py  test_ortep.py
tests/analyse/cif_files/: difference_test1.cif  difference_test2.cif
tests/analyse/quality/: test_base.py  test_cif.py  test_html.py  test_precision.py
tests/cif/: test_cif2cif.py  test_convert_atoms_aniso.py  test_entrynames.py  test_merge.py  test_read.py  test_structure_copy.py  test_trim.py  test_uncertainties.py
tests/cif/cif2cif/: conftest.py  test_cif2cifbase.py  test_cif2cifyaml.py
tests/cif/cif_files/: 80K_P_out.cif  iso2aniso.cif
tests/cif/convert/: test_cif2shelx_ins.py  test_hkl.py  test_shelxl_afix.py  test_shelxt.py  test_tsc.py
tests/cif/convert_hkl/: test_hkl.py
tests/converters/: test_cif.py  test_cif_trim.py
tests/converters/shelx/: olex.cif  shelx.cif  target.hkl  test_hkl.py
tests/robots/: test_base_cmd.py  test_basesocket.py  test_mopro.py  test_olex2.py
tests/robots/cif_files/: refine_conv_allaniso.cif  refine_conv_nonHaniso.cif  refine_nonconv_allaniso.cif
tests/robots/eval/: test_eval_any.py  test_eval_files.py  test_eval_peakref.py  test_eval_pic.py  test_eval_rmat.py  test_eval_robots.py  test_settings_vic.py  test_text_file.py
tests/robots/olex/: test_olex2.py
tests/util/: test_cif.py  test_cif_atoms_aniso.py  test_cif_merge.py  test_cif_structure_copy.py  test_convergence.py  test_wine.py
tests/util/cif_files/: 105K_P_out.cif  80K_P_out.cif  difference_test1.cif  difference_test2.cif  iso2aniso.cif  merge_me.cif  position_difference1.cif  position_difference2.cif
(+8 files in other folders)
